--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
-    "resend": "^4.6.0"
+    "resend": "^4.6.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
