--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "express-validator": "^7.2.1",
     "moment": "^2.30.1",
     "nodemailer": "^7.0.3",
